# ka-ching

./: README.md  flake.nix  poetryenv.nix  pyproject.toml
src/: models.py
tests/testdata/: bank_beta.csv  bank_delta.csv  bank_epsilon.csv  bank_gamma.csv  bank_zeta.csv
