[tool.poetry]
name = "ka-ching"
version = "0.0.1"
description = "Personal finance framework"
authors = ["Izzy Lancaster <roux-macro0j@icloud.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "ka_ching"}]

[tool.poetry.dependencies]
python = "^3.10"
apsw = "^3.42.0.1"
peewee = "^3.16.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
